[package]
name = "uhid-fs"
version = "0.0.1"
authors = ["Sameer Puri <purisame@spuri.io>", "Daniel Stiner <danstiner@gmail.com>"]
edition = "2018"
description = "Wrapper around UHID"
repository = "https://github.com/sameer/uhid-fs"
documentation = "https://www.kernel.org/doc/html/latest/hid/uhid.html"
license = "MIT OR Apache-2.0"
keywords = ["hid", "uhid", "linux", "userspace", "transport"]
catergories = ["os", "os::unix-apis"]
exclude = [
    ".travis.yml"
]

[dependencies]
uhid-sys = "1"
arrayvec = "0.5"
enumflags2 = "0.6"
libc = "0.2"
