[package]
name = "uhid-fs"
version = "0.0.1"
authors = ["Sameer Puri <purisame@spuri.io>", "Daniel Stiner <danstiner@gmail.com>"]
edition = "2018"
description = "Interface to Linux UHID (user-space HID transport drivers)"
repository = "https://github.com/sameer/uhid-fs"
license = "MIT OR Apache-2.0"
keywords = ["hid", "uhid", "linux", "userspace", "transport"]
categories = ["os", "os::unix-apis"]
exclude = [
    ".travis.yml"
]

[lib]
doc = true

[dependencies]
uhid-sys = "1"
arrayvec = "0.5"
enumflags2 = "0.6"
libc = "0.2"
