[package]
name = "uhid-actix"
version = "0.1.0"
authors = ["Sameer Puri <sameer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uhid-sys = "1"
arrayvec = { version = "0.5", features = ["std", "array-sizes-33-128"] }
